[gd_scene load_steps=2 format=3 uid="uid://tpfdwl70tpof"]

[ext_resource type="Script" path="res://TimersControlScript.gd" id="1_5qigo"]

[node name="Node2D" type="Node2D"]
position = Vector2(0, -170)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 3.0
offset_top = 174.0
offset_right = 1081.0
offset_bottom = 1922.0
script = ExtResource("1_5qigo")

[node name="TimerTyperButtonConrainer" type="HBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 3.0
offset_top = 727.0
offset_right = 1090.0
offset_bottom = 883.0

[node name="StopWatchButton" type="Button" parent="Control/TimerTyperButtonConrainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "StopWatch"

[node name="Panle_StopWatch" type="Panel" parent="Control/TimerTyperButtonConrainer/StopWatchButton"]
layout_mode = 2
offset_top = 156.0
offset_right = 1075.0
offset_bottom = 1021.0

[node name="Label_StopWatch" type="Label" parent="Control/TimerTyperButtonConrainer/StopWatchButton/Panle_StopWatch"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -359.5
offset_top = -1134.5
offset_right = 299.5
offset_bottom = -997.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
text = "00:00:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartEndButton_StopWatch" type="Button" parent="Control/TimerTyperButtonConrainer/StopWatchButton/Panle_StopWatch"]
layout_mode = 0
offset_left = 273.0
offset_top = 296.0
offset_right = 737.0
offset_bottom = 536.0
theme_override_font_sizes/font_size = 50
text = "Start"

[node name="CountdownButton" type="Button" parent="Control/TimerTyperButtonConrainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Countdown"

[node name="Panle_CountDown" type="Panel" parent="Control/TimerTyperButtonConrainer/CountdownButton"]
visible = false
layout_mode = 0
offset_left = -273.0
offset_top = 156.0
offset_right = 802.0
offset_bottom = 1021.0

[node name="Label_CountDown" type="Label" parent="Control/TimerTyperButtonConrainer/CountdownButton/Panle_CountDown"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -359.5
offset_top = -1134.5
offset_right = 299.5
offset_bottom = -997.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
text = "00:01:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartEndButton_CountDown" type="Button" parent="Control/TimerTyperButtonConrainer/CountdownButton/Panle_CountDown"]
layout_mode = 0
offset_left = 269.0
offset_top = 449.0
offset_right = 733.0
offset_bottom = 659.0
theme_override_font_sizes/font_size = 50
text = "Start"

[node name="HSlider_CountDown" type="HSlider" parent="Control/TimerTyperButtonConrainer/CountdownButton/Panle_CountDown"]
layout_mode = 0
offset_left = 116.0
offset_top = 146.0
offset_right = 916.0
offset_bottom = 347.0
min_value = 60.0
max_value = 28800.0
step = 60.0
value = 60.0
rounded = true

[node name="PromodoButton" type="Button" parent="Control/TimerTyperButtonConrainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Promodo"

[node name="Panle_Promodo" type="Panel" parent="Control/TimerTyperButtonConrainer/PromodoButton"]
visible = false
layout_mode = 0
offset_left = -565.0
offset_top = 156.0
offset_right = 510.0
offset_bottom = 1021.0

[node name="Label_Work_Promodo" type="Label" parent="Control/TimerTyperButtonConrainer/PromodoButton/Panle_Promodo"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -359.5
offset_top = -1134.5
offset_right = 299.5
offset_bottom = -997.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
text = "00:10:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label_Rest_Promodo" type="Label" parent="Control/TimerTyperButtonConrainer/PromodoButton/Panle_Promodo"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -359.5
offset_top = -997.5
offset_right = 299.5
offset_bottom = -860.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
text = "00:05:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label_sessions_Promodo" type="Label" parent="Control/TimerTyperButtonConrainer/PromodoButton/Panle_Promodo"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -359.5
offset_top = -860.5
offset_right = 299.5
offset_bottom = -723.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartEndButton_Promodo" type="Button" parent="Control/TimerTyperButtonConrainer/PromodoButton/Panle_Promodo"]
layout_mode = 0
offset_left = 74.0
offset_top = 525.0
offset_right = 538.0
offset_bottom = 735.0
theme_override_font_sizes/font_size = 50
text = "Start"

[node name="HSlider_Work_Promodo" type="HSlider" parent="Control/TimerTyperButtonConrainer/PromodoButton/Panle_Promodo"]
layout_mode = 0
offset_left = 37.0
offset_top = 43.0
offset_right = 1024.0
offset_bottom = 146.0

[node name="HSlider_Rest_Promodo2" type="HSlider" parent="Control/TimerTyperButtonConrainer/PromodoButton/Panle_Promodo"]
layout_mode = 0
offset_left = 37.0
offset_top = 193.0
offset_right = 1024.0
offset_bottom = 296.0

[node name="HSlider_Sessions_Promodo" type="HSlider" parent="Control/TimerTyperButtonConrainer/PromodoButton/Panle_Promodo"]
layout_mode = 0
offset_left = 37.0
offset_top = 346.0
offset_right = 1024.0
offset_bottom = 449.0

[connection signal="pressed" from="Control/TimerTyperButtonConrainer/StopWatchButton" to="Control" method="_on_stop_watch_button_pressed"]
[connection signal="pressed" from="Control/TimerTyperButtonConrainer/StopWatchButton/Panle_StopWatch/StartEndButton_StopWatch" to="Control" method="_on_start_end_button_stop_watch_pressed"]
[connection signal="pressed" from="Control/TimerTyperButtonConrainer/CountdownButton" to="Control" method="_on_countdown_button_pressed"]
[connection signal="pressed" from="Control/TimerTyperButtonConrainer/CountdownButton/Panle_CountDown/StartEndButton_CountDown" to="Control" method="_on_start_end_button_count_down_pressed"]
[connection signal="value_changed" from="Control/TimerTyperButtonConrainer/CountdownButton/Panle_CountDown/HSlider_CountDown" to="Control" method="_on_h_slider_count_down_value_changed"]
[connection signal="pressed" from="Control/TimerTyperButtonConrainer/PromodoButton" to="Control" method="_on_promodo_button_pressed"]
[connection signal="pressed" from="Control/TimerTyperButtonConrainer/PromodoButton/Panle_Promodo/StartEndButton_Promodo" to="Control" method="_on_start_end_button_promodo_pressed"]
[connection signal="value_changed" from="Control/TimerTyperButtonConrainer/PromodoButton/Panle_Promodo/HSlider_Work_Promodo" to="Control" method="_on_h_slider_work_promodo_value_changed"]
[connection signal="value_changed" from="Control/TimerTyperButtonConrainer/PromodoButton/Panle_Promodo/HSlider_Rest_Promodo2" to="Control" method="_on_h_slider_rest_promodo_2_value_changed"]
[connection signal="value_changed" from="Control/TimerTyperButtonConrainer/PromodoButton/Panle_Promodo/HSlider_Sessions_Promodo" to="Control" method="_on_h_slider_sessions_promodo_value_changed"]
